--- a/frontend/src/app/views/cidade/cidade-listar/cidade-listar.component.html
+++ b/frontend/src/app/views/cidade/cidade-listar/cidade-listar.component.html
@@ -82,8 +82,8 @@
                 <td class="text-center">
                   {{ cidade.latitude }} | {{ cidade.longitude }}
                 </td>
-                <td class="text-center">
-                  <i class="fa fa-cloud" style="font-size: 24px"></i>
+                <td class="text-center d-flex justify-content-center">
+                  <i class="fa fa-cloud fa-2x" style="cursor: pointer" title="Visualizar Tempo" (click)="abrirTempo(cidade)"></i>
                 </td>
               </tr>
             </tbody>
@@ -103,3 +103,7 @@
     </div>
   </div> 
 </div>
+
+<app-overlay [(show)]="abrirOverlayTempo">
+  <app-tempo [abrirTempo]="abrirOverlayTempo" [dados]="tempoObjDTO"></app-tempo>
+</app-overlay>
