--- a/frontend/src/app/views/cidade/tempo/tempo.component.html
+++ b/frontend/src/app/views/cidade/tempo/tempo.component.html
@@ -1,50 +1,57 @@
-<div class="container" *ngIf="dadosTempo && dados">
+
+<div class="font-3xl pl-3 text-muted" *ngIf="!carregou">
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  Carregando...
+</div>
+<div class="container" *ngIf="dados && dadosTempo && carregou" >
   <div class="font-4xl font-weight-bold text-muted">
     {{ dados.nomeCidade }}, {{ dados.pais }}
   </div>
   <div class="text-muted font-weight-bold" >
-    {{ dadosTempo.current.dt * 1000 | date: 'fullDate' }}
+    {{ dadosTempo.current?.dt * 1000 | date: 'fullDate' }}
   </div>
   <div class="font-2xl font-weight-bold text-muted">
-    {{ dadosTempo.current.weather[0].description }}
+    {{ dadosTempo.current?.weather[0]?.description }}
   </div>
   <div class="row mb-2">
     <div class="col-5 text-center">
       <img
         src="http://openweathermap.org/img/wn/{{
-          dadosTempo.current.weather[0].icon
+          dadosTempo.current?.weather[0]?.icon
         }}@2x.png"
       />
       <span class="font-5xl font-weight-bold"
-        >{{ dadosTempo.current.temp | number: "1.0-0" }}°C</span
+        >{{ dadosTempo.current?.temp | number: "1.0-0" }}°C</span
       >
       <br />
     </div>
-    <div class="col-6" *ngIf="dadosTempo && dados">
+    <div class="col-6">
       <div class="text-muted">
         <span class="font-weight-bold">Min/Max:</span>
-        {{ dadosTempo.daily[0].temp.min | number: "1.0-0" }}°C /
-        {{ dadosTempo.daily[0].temp.max | number: "1.0-0" }}°C
+        {{ dadosTempo.daily[0]?.temp.min | number: "1.0-0" }}°C /
+        {{ dadosTempo.daily[0]?.temp.max | number: "1.0-0" }}°C
       </div>
-      <div class="text-muted" *ngIf="dadosTempo.daily[0].rain !== null">
-        <span class="font-weight-bold" *ngIf="dadosTempo.daily[0].rain !== null"
+      <div class="text-muted" *ngIf="dadosTempo.daily[0]?.rain !== null">
+        <span class="font-weight-bold" *ngIf="dadosTempo.daily[0]?.rain !== null"
           >Chuva:</span
         >
-        {{ dadosTempo.daily[0].rain | number: "1.2-2" }}mm
+        {{ dadosTempo.daily[0]?.rain | number: "1.2-2" }}mm
       </div>
-      <div class="text-muted" *ngIf="dadosTempo.daily[0].rain === null">
-        <span class="font-weight-bold" *ngIf="dadosTempo.daily[0].rain === null"
+      <div class="text-muted" *ngIf="dadosTempo.daily[0]?.rain === null">
+        <span class="font-weight-bold" *ngIf="dadosTempo.daily[0]?.rain === null"
           >Chuva:</span
         >
         {{ 0 | number: "1.2-2" }}mm
       </div>
       <div class="text-muted">
         <span class="font-weight-bold">Pressão:</span>
-        {{ dadosTempo.current.pressure }}mb
+        {{ dadosTempo.current?.pressure }}mb
       </div>
       <div class="text-muted">
         <span class="font-weight-bold">Umidade:</span>
-        {{ dadosTempo.current.humidity | number: "1.2-2" }}%
+        {{ dadosTempo.current?.humidity | number: "1.2-2" }}%
       </div>
     </div>
   </div>
@@ -104,7 +111,7 @@
       </div>
     </div>
   </div>
-  <div class="row" *ngIf="dadosTempo && dadosTempo.alerts">
+  <div class="row" *ngIf="carregou && dadosTempo.alerts && dadosTempo.alerts.length > 0">
     <div class="col-12">
       <div class="card alert-danger">
         <div class="card-body p-3">
@@ -112,13 +119,13 @@
             <div class="col">
               <div class="row">
                 <div class="col-8 col-sm-6">
-                  <span class="font-weight-bold">Evento:</span> {{ dadosTempo.alerts[0].event }}
+                  <span class="font-weight-bold">Evento:</span> {{ dadosTempo.alerts[0]?.event }}
                 </div>
                 <div class="col-4 col-sm-6">
-                  <span class="font-weight-bold">Inicío/Fim:</span> {{ dadosTempo.alerts[0].start * 1000 | date: 'EEEE' }} / {{ dadosTempo.alerts[0].end * 1000 | date: 'EEEE'  }}
+                  <span class="font-weight-bold">Inicío/Fim:</span> {{ dadosTempo.alerts[0]?.start * 1000 | date: 'EEEE' }} / {{ dadosTempo.alerts[0]?.end * 1000 | date: 'EEEE'  }}
                 </div>
               </div>
-              <span class="font-weight-bold">Enviado por:</span> {{ dadosTempo.alerts[0].description }}
+              <span class="font-weight-bold">Enviado por:</span> {{ dadosTempo.alerts[0]?.description }}
             </div>
           </div>
         </div>
